--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,12 +2,17 @@
 body .didYouKnow input::-moz-placeholder, body .greenCheck input::-moz-placeholder, body footer .bottom .newsletter input::-moz-placeholder {
   font-family: "Ubuntu Mono", monospace;
 }
-body, body header, body .didYouKnow input::placeholder, body .didYouKnow button, body .greenCheck input::placeholder, body .greenCheck button, body footer .bottom .newsletter input::placeholder {
+body, body header, body .didYouKnow input::placeholder, body .didYouKnow button, body .greenCheck input::placeholder, body .greenCheck button, body footer .bottom .newsletter input::placeholder, body footer .bottom .newsletter button {
   font-family: "Ubuntu Mono", monospace;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
   margin: auto;
+  overflow-x: hidden;
 }
 body header {
   background-color: #A5DD9B;
@@ -25,6 +30,31 @@ body header a {
 }
 body header p {
   margin: 0;
+}
+@media (min-width: 750px) {
+  body header {
+    justify-content: center;
+    padding: 4vw 4vw;
+  }
+  body header a {
+    font-size: 3vw;
+    margin: 0 3vw;
+  }
+  body header p {
+    font-size: 3vw;
+  }
+}
+@media (min-width: 1100px) {
+  body header {
+    padding: 2vw 10vw;
+  }
+  body header a {
+    font-size: 1.5vw;
+    margin: 0 1vw;
+  }
+  body header p {
+    font-size: 1.5vw;
+  }
 }
 body .heroSection {
   background-color: #40A578;
@@ -54,7 +84,7 @@ body .heroSection .heroBubbleOne h2 {
 body .heroSection .heroBubbleTwo {
   color: #E6FF94;
   border: 4px solid #E6FF94;
-  border-radius: 90px;
+  border-radius: 999px;
   width: 30vw;
   height: 30vw;
   background-color: #40A578;
@@ -88,11 +118,75 @@ body .heroSection .calculateCircle p {
   top: 25%;
   right: 7.5%;
 }
+@media (min-width: 750px) {
+  body .heroSection {
+    padding: 10vw 0;
+  }
+  body .heroSection .heroBubbleOne {
+    height: 60vw;
+    width: 60vw;
+  }
+  body .heroSection .heroBubbleOne h2 {
+    left: 12%;
+    font-size: 8vw;
+    width: 30vw;
+  }
+  body .heroSection .heroBubbleTwo {
+    height: 25vw;
+    width: 25vw;
+  }
+  body .heroSection .heroBubbleTwo h4 {
+    font-size: 3vw;
+    width: 20vw;
+    left: 10%;
+  }
+  body .heroSection .calculateCircle {
+    bottom: -10%;
+  }
+  body .heroSection .calculateCircle p {
+    font-size: 2.5vw;
+    top: 28%;
+    left: 13%;
+  }
+}
+@media (min-width: 1100px) {
+  body .heroSection .heroBubbleOne {
+    height: 50vw;
+    width: 50vw;
+  }
+  body .heroSection .heroBubbleOne h2 {
+    left: -20%;
+    top: -5%;
+  }
+  body .heroSection .heroBubbleTwo {
+    height: 20vw;
+    width: 20vw;
+    right: 18%;
+    bottom: 15%;
+  }
+  body .heroSection .heroBubbleTwo h4 {
+    font-size: 1.8vw;
+    width: 15vw;
+    top: 33%;
+    left: 14%;
+  }
+  body .heroSection .calculateCircle {
+    width: 16vw;
+    height: 16vw;
+    bottom: -11%;
+  }
+  body .heroSection .calculateCircle p {
+    font-size: 2vw;
+    left: 20%;
+    top: 33%;
+  }
+}
 body .didYouKnow {
   background-color: #A5DD9B;
   padding: 10vw 0;
   position: relative;
   padding-bottom: 17vw;
+  scroll-margin-top: 100px;
 }
 body .didYouKnow h2 {
   text-align: center;
@@ -163,11 +257,104 @@ body .didYouKnow div p {
   top: 12%;
   right: 10%;
 }
+@media (min-width: 750px) {
+  body .didYouKnow {
+    padding-bottom: 10vw;
+  }
+  body .didYouKnow h2 {
+    font-size: 5vw;
+  }
+  body .didYouKnow h3 {
+    font-size: 4vw;
+    width: 70vw;
+    display: block;
+    margin: auto;
+    margin-top: 5vw;
+  }
+  body .didYouKnow h4 {
+    font-size: 2.5vw;
+    width: 70vw;
+    display: block;
+    margin: auto;
+    margin-top: 7vw;
+    font-weight: 400;
+  }
+  body .didYouKnow input {
+    margin-top: 10vw;
+    width: 30vw;
+    padding: 2vw 15vw;
+  }
+  body .didYouKnow input::-moz-placeholder {
+    font-size: 3vw;
+  }
+  body .didYouKnow input::placeholder {
+    font-size: 3vw;
+  }
+  body .didYouKnow button {
+    font-size: 2.5vw;
+  }
+}
+body .didYouKnow div {
+  left: 7%;
+}
+body .didYouKnow div p {
+  font-size: 2.5vw;
+  top: 21%;
+  left: 28%;
+}
+@media (min-width: 1100px) {
+  body .didYouKnow {
+    padding: 20vw 0;
+    padding-bottom: 25vw;
+  }
+  body .didYouKnow h2 {
+    font-size: 4vw;
+  }
+  body .didYouKnow h3 {
+    font-size: 3.5vw;
+    width: 55vw;
+    margin-top: 5vw;
+  }
+  body .didYouKnow h4 {
+    font-size: 2vw;
+    margin-top: 4vw;
+  }
+  body .didYouKnow input {
+    margin-top: 8vw;
+    padding: 2vw 35vw 2vw 4vw;
+    border-radius: 50px;
+  }
+  body .didYouKnow input::-moz-placeholder {
+    font-size: 1.8vw;
+    text-align: left;
+  }
+  body .didYouKnow input::placeholder {
+    font-size: 1.8vw;
+    text-align: left;
+  }
+  body .didYouKnow button {
+    font-size: 2vw;
+    border-radius: 50px;
+    margin-top: 3vw;
+  }
+  body .didYouKnow div {
+    width: 16vw;
+    height: 16vw;
+    bottom: -9%;
+  }
+  body .didYouKnow div p {
+    font-size: 2vw;
+    left: 15%;
+    top: 33%;
+    width: 30vw;
+  }
+}
 body .greenCheck {
   background-color: #40A578;
   text-align: center;
   padding: 18vw 0;
   position: relative;
+  scroll-margin-top: 100px;
 }
 body .greenCheck h3 {
   color: #E6FF94;
@@ -229,6 +416,85 @@ body .greenCheck div p {
   top: 22%;
   right: 4%;
 }
+@media (min-width: 750px) {
+  body .greenCheck {
+    padding: 12vw 0;
+  }
+  body .greenCheck h3 {
+    font-size: 4vw;
+  }
+  body .greenCheck h4 {
+    font-size: 3vw;
+    color: #E6FF94;
+    margin-top: 5vw;
+  }
+  body .greenCheck input {
+    width: 30vw;
+    margin-top: 10vw;
+    padding: 2vw 15vw;
+  }
+  body .greenCheck input::-moz-placeholder {
+    font-size: 3vw;
+  }
+  body .greenCheck input::placeholder {
+    font-size: 3vw;
+  }
+  body .greenCheck button {
+    font-size: 2.5vw;
+    margin-top: 6vw;
+  }
+  body .greenCheck div {
+    left: 7.5%;
+    bottom: -11%;
+  }
+  body .greenCheck div p {
+    font-size: 2.5vw;
+    left: 8%;
+    top: 30%;
+  }
+}
+@media (min-width: 1100px) {
+  body .greenCheck {
+    padding: 20vw 0;
+    padding-bottom: 30vw;
+  }
+  body .greenCheck h3 {
+    font-size: 3vw;
+    width: 60vw;
+  }
+  body .greenCheck h4 {
+    font-size: 2vw;
+    width: 75vw;
+  }
+  body .greenCheck input {
+    margin-top: 8vw;
+    padding: 2vw 35vw 2vw 4vw;
+    border-radius: 50px;
+  }
+  body .greenCheck input::-moz-placeholder {
+    font-size: 1.8vw;
+    text-align: left;
+  }
+  body .greenCheck input::placeholder {
+    font-size: 1.8vw;
+    text-align: left;
+  }
+  body .greenCheck button {
+    font-size: 2vw;
+    border-radius: 50px;
+    margin-top: 4vw;
+  }
+  body .greenCheck div {
+    width: 16vw;
+    height: 16vw;
+    bottom: -9%;
+  }
+  body .greenCheck div p {
+    font-size: 2vw;
+    left: 7%;
+    top: 35%;
+  }
+}
 body .resources {
   background-color: #A5DD9B;
   padding: 20vw 0;
@@ -236,6 +502,7 @@ body .resources {
   padding-right: 7vw;
   color: #006769;
   position: relative;
+  scroll-margin-top: 100px;
 }
 body .resources h2 {
   margin: 0;
@@ -274,9 +541,85 @@ body .resources .smallCircle p {
   right: 4%;
   text-align: center;
 }
+@media (min-width: 750px) {
+  body .resources {
+    padding: 12vw 0;
+    padding-left: 13vw;
+    padding-right: 7vw;
+  }
+  body .resources h2 {
+    font-size: 5vw;
+  }
+  body .resources h4 {
+    font-size: 3vw;
+  }
+  body .resources ul {
+    margin-left: -2vw;
+  }
+  body .resources ul li {
+    padding: 2vw 0;
+    font-size: 3vw;
+  }
+  body .resources .smallCircle {
+    left: 8.5%;
+    bottom: -11%;
+  }
+  body .resources .smallCircle p {
+    font-size: 2.5vw;
+    top: 26%;
+  }
+}
+@media (min-width: 1100px) {
+  body .resources {
+    padding: 15vw 15vw;
+  }
+  body .resources h2 {
+    font-size: 5vw;
+  }
+  body .resources h4 {
+    font-size: 1.5vw;
+    width: 33vw;
+    margin-top: 7vw;
+  }
+  body .resources .decoCircleOne {
+    width: 70vw;
+    height: 70vw;
+    border: 4px solid #006769;
+    border-radius: 999px;
+    position: absolute;
+    z-index: 1;
+    right: -25%;
+    top: 17%;
+    overflow-x: hidden;
+  }
+  body .resources ul {
+    margin-top: 1vw;
+  }
+  body .resources ul li {
+    font-size: 1.5vw;
+    padding: 0.8vw 0;
+  }
+  body .resources .smallCircle {
+    width: 16vw;
+    height: 16vw;
+    bottom: -13%;
+  }
+  body .resources .smallCircle p {
+    font-size: 2vw;
+    left: 5%;
+    top: 35%;
+  }
+}
 body footer {
   background-color: #40A578;
   padding: 10vw 8vw;
+  padding-bottom: 15vw;
+  scroll-margin-top: 100px;
+  position: relative;
+  z-index: 100;
+}
+body footer .space {
+  margin-bottom: 15vw;
 }
 body footer h2 {
   color: #E6FF94;
@@ -310,7 +653,6 @@ body footer .bottom .newsletter input {
   border-radius: 20px;
   padding-left: 2vw;
   width: 30vw;
-  margin-left: 1vw;
 }
 body footer .bottom .newsletter input::-moz-placeholder {
   font-size: 3vw;
@@ -327,4 +669,191 @@ body footer .bottom .newsletter button {
   border: 2px solid #E6FF94;
   border-radius: 20px;
   color: #E6FF94;
+  margin-top: 3vw;
+  font-size: 3vw;
+}
+body footer .bottom .footerBubbles {
+  position: relative;
+}
+body footer .bottom .footerBubbles .bigBubble {
+  width: 20vw;
+  height: 20vw;
+  border: solid #E6FF94 2px;
+  border-radius: 999px;
+  position: absolute;
+  bottom: 1%;
+  right: 5%;
+}
+body footer .bottom .footerBubbles .bigBubble h2 {
+  position: absolute;
+  left: 10%;
+}
+body footer .bottom .footerBubbles .bigBubble h3 {
+  position: absolute;
+  color: #FFFFFF;
+  top: 35%;
+  right: 10%;
+  font-weight: 100;
+  font-size: 4vw;
+}
+body footer .bottom .footerBubbles .smallBubble {
+  width: 6vw;
+  height: 6vw;
+  background-color: #40A578;
+  border: 2px solid #E6FF94;
+  border-radius: 999px;
+  position: absolute;
+  bottom: -10%;
+  right: 9%;
+}
+@media (min-width: 750px) {
+  body footer {
+    padding: 10vw 12vw;
+  }
+  body footer .space {
+    font-size: 6vw;
+    margin-bottom: 6vw;
+  }
+  body footer p {
+    font-size: 3vw;
+  }
+  body footer #mobileText {
+    display: none;
+  }
+  body footer .bottom {
+    margin-top: 15vw;
+    padding-bottom: 5vw;
+    gap: 1vw;
+  }
+  body footer .bottom .newsletter p {
+    font-size: 3vw;
+    margin-bottom: 2vw;
+  }
+  body footer .bottom .newsletter input {
+    padding: 1.5vw 1vw;
+    margin-top: 2vw;
+  }
+  body footer .bottom .newsletter input::-moz-placeholder {
+    font-size: 2.5vw;
+  }
+  body footer .bottom .newsletter input::placeholder {
+    font-size: 2.5vw;
+  }
+  body footer .bottom .newsletter button {
+    font-size: 2.5vw;
+    padding: 1vw 2vw;
+  }
+  body footer .bottom .footerBubbles .bigBubble {
+    width: 25vw;
+    height: 25vw;
+  }
+  body footer .bottom .footerBubbles .bigBubble h2 {
+    font-size: 7vw;
+  }
+  body footer .bottom .footerBubbles .bigBubble h3 {
+    font-size: 5vw;
+    top: 25%;
+  }
+  body footer .bottom .footerBubbles .smallBubble {
+    width: 8vw;
+    height: 8vw;
+  }
+}
+@media (min-width: 1100px) {
+  body footer {
+    padding: 20vw 14vw 0 14vw;
+  }
+  body footer .space {
+    font-size: 3.5vw;
+    margin-bottom: 4vw;
+  }
+  body footer p {
+    font-size: 1.5vw;
+    width: 35vw;
+  }
+  body footer .decoCircleTwo {
+    width: 40vw;
+    height: 40vw;
+    border: 4px solid #E6FF94;
+    border-radius: 999px;
+    position: absolute;
+    right: -10%;
+    top: 20%;
+  }
+  body footer .decoCircleThree {
+    width: 15vw;
+    height: 15vw;
+    border: solid 4px #E6FF94;
+    border-radius: 999px;
+    position: absolute;
+    background-color: #40A578;
+    right: 20%;
+    top: 48%;
+  }
+  body footer .bottom {
+    grid-template-columns: 15% 25% 30% 30%;
+    margin: 0 -9vw;
+    gap: 2vw;
+    margin-top: 30vw;
+  }
+  body footer .bottom .desktopFooter {
+    display: flex;
+    flex-direction: column;
+  }
+  body footer .bottom .desktopFooter p {
+    font-size: 1.5vw;
+    width: 20vw;
+    margin: 0.2vw;
+  }
+  body footer .bottom .desktopFooter p:nth-child(1) {
+    margin-bottom: 2vw;
+  }
+  body footer .bottom .desktopFooter .link {
+    margin-bottom: 2vw;
+  }
+  body footer .bottom .newsletter p {
+    font-size: 1.5vw;
+    margin: 0.5vw;
+  }
+  body footer .bottom .newsletter input {
+    width: 80%;
+    margin-top: 1.5vw;
+    padding: 0.5vw;
+  }
+  body footer .bottom .newsletter input::-moz-placeholder {
+    font-size: 1.5vw;
+  }
+  body footer .bottom .newsletter input::placeholder {
+    font-size: 1.5vw;
+  }
+  body footer .bottom .newsletter button {
+    font-size: 1.5vw;
+    padding: 0.5vw 2vw;
+    margin-top: 1.5vw;
+  }
+  body footer .bottom .footerBubbles .bigBubble {
+    width: 15vw;
+    height: 15vw;
+    left: 0%;
+    border-width: 4px;
+  }
+  body footer .bottom .footerBubbles .bigBubble h2 {
+    font-size: 5vw;
+    left: 25%;
+    top: 20%;
+    margin: 0;
+  }
+  body footer .bottom .footerBubbles .bigBubble h3 {
+    margin: 0;
+    font-size: 2vw;
+    top: 50%;
+    left: 25%;
+  }
+  body footer .bottom .footerBubbles .smallBubble {
+    width: 7vw;
+    height: 7vw;
+    right: 35%;
+    bottom: -10%;
+    border-width: 4px;
+  }
 }
