--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -815,6 +815,9 @@ body footer .bottom .footerBubbles .smallBubble {
     font-size: 1.5vw;
     margin: 0.5vw;
   }
+  body footer .bottom .newsletter p:nth-child(1) {
+    margin-top: 0;
+  }
   body footer .bottom .newsletter input {
     width: 80%;
     margin-top: 1.5vw;
