--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -911,6 +911,10 @@ body {
           p{
             font-size: 1.5vw;
             margin: 0.5vw;
+
+            &:nth-child(1){
+              margin-top: 0;
+            }
           }
 
           input{
