--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,11 +18,13 @@ body header {
   background-color: #A5DD9B;
   display: flex;
   flex-direction: row;
+  justify-content: center;
   color: #006769;
   font-size: 4vw;
   padding: 8vw 4vw;
 }
 body header a {
+  font-size: 3vw;
   text-decoration: none;
   color: #006769;
   font-weight: 500;
